# cka-lab

./: README.md  cli.py  pyproject.toml
.github/workflows/: pylint.yml
exercises/exercise-1/: scaffold.yaml
exercises/troubleshooting/1/: README.md  check.py  scaffold.yaml
utils/: kube.py
