[project]
name = "cka-lab"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Jake van Biezen",email = "jake1998@hotmail.nl"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all] (>=0.15.2,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "kubernetes (>=32.0.1,<33.0.0)",
    "pylint (>=3.3.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
